--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
+<div>
+  <h1>My Goals</h1>
+  <hr>
+  <ul>
+    <li *ngFor='let goal of goals'>
+      {{goal.name}}
+    </li>
+  </ul>
+</div>
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
