Used directives ngFor and ngIf.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
       {{goal.name}}
     </li>
   </ul>
+    <p *ngIf='goals.length > 5'>Your goals are too many</p>
+
 </div>
 
 <!-- <router-outlet></router-outlet> -->
